[package]
name = "modify"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Hoffmann"]
email = ["p.hoffmann@berlin.de"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "std"], optional = true }

[features]
serde = ["dep:serde"]
