[package]
name = "modify"
version = "0.1.1"
edition = "2021"
authors = ["Patrick Hoffmann <p.hoffmann@berlin.de>"]
repository = "https://github.com/fightling/modify.git"
license = "MIT OR Apache-2.0"
description = "A library to track changes of a value."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "std"], optional = true }

[features]
serde = ["dep:serde"]
